<resources>
    <string name="app_name_main">排水外勤</string>
    <string name="app_is_running">正在运行</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_main">主界面</string>
    <string name="menu_workorder">工单</string>
    <string name="lv_todo_item_tag">lv_todo_item_tag</string>
    <string name="exit_logout">确定退出系统吗？</string>
    <string name="admin_sign_out_confirm">确定签退吗？</string>
    <string name="dialog_title_prompt">提示</string>
    <string name="dialog_title_feedback">审核原因描述</string>
    <string name="app_crashed">程序出现了错误。请重新启动。</string>
    <string name="over_input_length">输入字数超出限制</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="later">稍后</string>
    <string name="close">关闭</string>
    <string name="new_">新建</string>
    <string name="clear">清除</string>
    <string name="str_yes">是</string>
    <string name="str_no">否</string>
    <string name="network_not_available">网络连接不可用，请检查网络连接。</string>
    <string name="current_location_not_available">未获取到当前坐标，请稍后再试</string>
    <string name="prompt_report_position_fail">坐标上报失败，请检查网络连接是否可用。</string>
    <string name="save">保存</string>
    <string name="network_access_error">访问服务器出现错误。可能是因为当前网络不可用，或网络限制导致无法访问服务器。</string>
    <string name="network_default_error_msg">请求失败</string>
    <string name="network_request_timeout">请求超时</string>
    <string name="please_select">请选择</string>
    <string name="star_required_mark">*</string>
    <string name="info_report">信息上报</string>
    <string name="take_photo">拍照</string>
    <string name="submit_at_least_three_photos">至少上传三张照片</string>
    <string name="select_photo_from_album">从相册中选取</string>
    <string name="take_video">拍摄视频</string>
    <string name="select_video_from_album">选择视频</string>
    <string name="take_record_audio">录音</string>
    <string name="select_audio_from_album">从文件中选择</string>
    <string name="action_menu_title">请选择</string>
    <string name="uploading_now">正在上传</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_fail">上传失败</string>
    <string name="server_response_invalid">服务器返回结果异常</string>
    <string name="compress_file_now">正在压缩文件</string>
    <string name="upload_file_fail">上传附件失败，请再次提交上传失败的文件</string>
    <string name="uploading_file">"正在上传%1$s项附件"</string>
    <string name="link_num">电话</string>
    <string name="phone_num_can_not_null">电话号码不能为空</string>
    <string name="error_phone_format">号码格式有误</string>
    <string name="photos">现场照片：</string>
    <string name="current_photos">现场照片</string>
    <string name="is_null_prompt">请检查是否填写完整</string>
    <string name="nothing_to_submit">没有内容需要提交</string>
    <string name="date_prompt">日期</string>
    <string name="time_prompt">时间</string>
    <string name="date_year_prompt">年份</string>
    <string name="date_year_str">年</string>
    <string name="middle_tag">-</string>
    <string name="date_year_str_start_tail">-01-01</string>
    <string name="date_year_str_end_tail">-12-31</string>
    <string name="date_month_str">月</string>
    <string name="date_month_start_str">-01</string>
    <string name="date_month_end_str">-31</string>
    <string name="date_month_prompt">月份</string>
    <string name="date_picker">选择日期</string>
    <string name="time_picker">选择时间</string>
    <string name="date_year_picker">选择年份</string>
    <string name="date_month_picker">选择月份</string>
    <string name="hold_on_please">请稍候</string>
    <string name="please_input_key_words">请输入关键字</string>
    <string name="space">   </string>
    <string name="delimeter1">、</string>
    <string name="click_time_pick_hits">点击选择时间</string>
    <string name="btn_login">登&#160;录</string>
    <string name="login_pwd_input">请输入登录密码</string>
    <string name="login_user_name_input">请输入您的用户名</string>
    <string name="str_remember_password">记住密码</string>
    <string name="str_auto_login">自动登录</string>
    <string name="str_forgetpassword">找回密码</string>
    <string name="str_clickinput">点击输入</string>
    <string name="str_click_download">点击下载</string>
    <string name="str_setting">设置</string>
    <string name="str_signin">登    录</string>
    <string name="str_logining">正在登录</string>
    <string name="str_searching">正在查询</string>
    <string name="str_submiting">正在提交数据</string>
    <string name="str_submit_success">提交成功</string>
    <string name="str_datasyncing">正在更新数据</string>
    <string name="str_aboutus">关于</string>
    <string name="str_exit">退出登录</string>
    <string name="str_notice_datamodify">数据已经修改</string>
    <string name="str_isSaveEdit">确定保存修改内容？</string>
    <string name="str_copyright">武汉易思迪信息科技有限公司 版权所有</string>
    <string name="str_copyright_en">Copyright©2014 ECity Co., Ltd. All Rights Reserved</string>
    <string name="str_agreement">使用条款和隐私政策</string>
    <string name="str_company">武汉易思迪信息科技有限公司</string>
    <string name="str_agreement_detail">    此版本适用于Android2.3.4及以上固件的主流手机，但不支持Pad系列的Android手持设备，在其它设备或型号上使用本软件，对于出现的任何问题，武汉易思迪信息科技有限公司不承担任何责任。本软件在使用过程中产生的数据流量费用，由运营商收取。本软件的安装使用受到《武汉易思迪信息科技有限公司软件许可和服务协议》协议约束。</string>
    <string name="str_soft_update_fail">更新失败</string>
    <string name="login_username_empty">用户名不能为空</string>
    <string name="login_password_empty">密码不能为空</string>
    <string name="login_logging_in">正在登录</string>
    <string name="login_fail_try_later">登录失败，请稍候重试</string>
    <string name="login_getting_init_paramters">正在获取初始化信息</string>
    <string name="login_get_server_time_error">获取服务器时间失败</string>
    <string name="login_get_init_paramters">获取初始化信息失败</string>
    <string name="login_new_version_found">更新到新版本</string>
    <string name="downloading_new_version">正在下载新版本</string>
    <string name="no_update_latest">已是最新版本</string>
    <string name="documents_download_fail1">下载失败，可能是因为网络不稳定，或文件地址无效</string>
    <string name="documents_download_fail2">下载失败。可能是因为文件数据无效</string>
    <string name="documents_download_success">文件下载成功</string>
    <string name="get_mapconfig_error">获取配置文件失败</string>
    <string name="checking_new_version">正在检测新版本&#8230;</string>
    <string name="check_new_version_fail">检测新版本失败!</string>
    <string name="setting_save">保存设置</string>
    <string name="setting_test_connection">测试连接</string>
    <string name="setting_testing_connetion">正在连接中</string>
    <string name="setting_test_connection_success">连接成功，请保存配置并登录</string>
    <string name="setting_test_connection_failed">连接失败</string>
    <string name="setting_login_setting">登录设置</string>
    <string name="setting_virtual_path">虚拟目录</string>
    <string name="setting_protocol">协议</string>
    <string name="setting_ip_address">IP地址</string>
    <string name="setting_server_ip">环境切换</string>
    <string name="setting_server_port">端口号</string>
    <string name="setting_server_info_empty">暂无%s</string>
    <string name="setting_dialog_msg_server_info_changed">设置信息有改变，确定保存吗？</string>
    <string name="setting_target_server_pro">联通端口</string>
    <string name="setting_target_server_uat">电信端口</string>
    <string name="setting_target_server_dev">开发环境</string>
    <string name="setting_normal">常 规</string>
    <string name="setting_custom">自定义</string>
    <string name="city_name">江门</string>
    <string name="temp_des">-4~11°C</string>
    <string name="wind_des">北风3–4级</string>
    <string name="no_weather_des">暂未获取到天气</string>
    <string name="notification_register_fail">通知功能注册失败，可能不能及时收到通知</string>
    <string name="str_one_more_click_exit">再次点击 退出应用</string>
    <string name="main_tab_message">消息</string>
    <string name="main_tab_application">外勤应用</string>
    <string name="main_tab_right_application">江门应用</string>
    <string name="main_tab_map">地图</string>
    <string name="main_tab_contacts">通讯录</string>
    <string name="main_tab_my">我</string>
    <string name="main_tab_web">网页</string>
    <string name="inbox_tab_to_do_list">我的消息</string>
    <string name="inbox_tab_notices">通知公告</string>
    <string name="inbox_tab_contacts">通讯录</string>
    <string name="inbox_tab_contact_root">联系人组织结构</string>
    <string name="contact_search_title">联系人查询</string>
    <string name="detail_tab_basic_info">基本信息</string>
    <string name="detail_tab_explore_info">勘察信息</string>
    <string name="detail_tab_flow_info">审批信息</string>
    <string name="detail_tab_repair_info">维修信息</string>
    <string name="tv_blank_msg_detail_flow_info">暂无审批信息</string>
    <string name="title_flow_info_detail">审批信息详情</string>
    <string name="event_flow_info_get_params">正在获取审批信息详情</string>
    <string name="title_activity_workorder_detail">基本信息</string>
    <string name="title_workorder_detail_flow_addman">申请人员:</string>
    <string name="title_workorder_detail_flow_state">状态:</string>
    <string name="title_workorder_detail_flow_addtime">申请时间:</string>
    <string name="next_processing_people">待处理人：</string>
    <string name="menu_workorder_default">全部</string>
    <string name="workorder_empty">暂无工单</string>
    <string name="menu_workorder_blank_content">该分类无内容，请切换至其他工单分类</string>
    <string name="menu_workorder_no_more">没有更多数据加载</string>
    <string name="menu_workorder_todo_all">全部</string>
    <string name="menu_workorder_todo_my_wait_scheduling">待调度</string>
    <string name="menu_workorder_todo_my_wait_dispatch">待分派</string>
    <string name="menu_workorder_todo_my_wait_recieve">待接单</string>
    <string name="menu_workorder_todo_my_wait_check">待审核</string>
    <string name="menu_workorder_finish_all">全部</string>
    <string name="menu_workorder_finish_wait_destroy_workorder">待销单</string>
    <string name="menu_workorder_finish_finish_destroy_workorder">已销单</string>
    <string name="menu_workorder_finish_return_workorder_to_system">退回工单平台</string>
    <string name="menu_workorder_process_all">全部</string>
    <string name="menu_workorder_process_wait_explore">待勘察</string>
    <string name="menu_workorder_process_wait_repaire">待上门维修</string>
    <string name="menu_workorder_process_wait_finish_work">待完工</string>
    <string name="menu_workorder_process_finish_work_audit">完工审核</string>
    <string name="menu_workorder_process_admin_has_audit">库管已审核</string>
    <string name="menu_workorder_process_delay_approve">延期通过</string>
    <string name="menu_workorder_process_delay_reject">延期驳回</string>
    <string name="menu_workorder_process_assist_approve">协助通过</string>
    <string name="map_descrip_zoomin">放大</string>
    <string name="map_descrip_zoomout">缩小</string>
    <string name="map_descrip_zoomfull">复位</string>
    <string name="map_descrip_gps">GPS定位</string>
    <string name="btn_feedback">反馈</string>
    <string name="workorder_repairman">维修人员</string>
    <string name="workorder_today">今日工单</string>
    <string name="workorder_wait_process">待处理</string>
    <string name="workorder_wait_process_address">待处理工单地址</string>
    <string name="event_report_title">事件上报</string>
    <string name="planningtask_task_in_position">到位情况：</string>
    <string name="planningtask_task_name">任务名称：</string>
    <string name="planningtask_task_start">任务开始时间：</string>
    <string name="planningtask_task_end">任务结束时间：</string>
    <string name="planningtask_task_linelen">任务巡查长度：</string>
    <string name="planningtask_task_pointcount">任务巡查点数：</string>
    <string name="planningtask_startwork_time">开始工作时间：</string>
    <string name="planningtask_endwork_time">结束工作时间：</string>
    <string name="planningtask_current_user">当前用户：</string>
    <string name="planningtask_speed">巡查速度：</string>
    <string name="planningtask_type">任务类型：</string>
    <string name="planningtask_not_arrived">未到位</string>
    <string name="planningtask_no_feedback">未反馈</string>
    <string name="planningtask_point_attr">详情</string>
    <string name="str_emergency_updatetime">更新时间：</string>
    <string name="str_emergency_updater">更新人：</string>
    <string name="str_emergency_describe">未添加任何描述信息</string>
    <string name="str_emergency_redownload">重新下载</string>
    <string name="str_emergency_download">下载</string>
</resources>