<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_theme_3"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/margin_30"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="18" >

        <TextView
            android:id="@+id/patrol_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:gravity="center_vertical|center_horizontal"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="16dp"
            android:text="@string/workorder_repairman"/>

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/today_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:gravity="center_vertical|center_horizontal"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="16dp"
            android:text="@string/workorder_today"/>

        <View style="@style/vertical_layout" />

        <TextView
            android:id="@+id/wait_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="center_vertical|center_horizontal"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="16dp"
            android:text="@string/workorder_wait_process"/>

        <View style="@style/vertical_layout" />

        <com.ecity.cswatersupply.ui.widght.ColorTextView
            android:id="@+id/wait_addresses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="7"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#120000"
            android:textSize="16dp"
            android:text="@string/workorder_wait_process_address"/>
    </LinearLayout>

    <View style="@style/horizontal_layout" />

</LinearLayout>