<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.ecity.medialibrary.widght.TouchImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:scaleType="fitXY"
            android:src="@drawable/ic_empty" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_emergency_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/tv_emergency_describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_emergency_describe"
                android:textSize="16sp" >
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_emergency_updater"
                    android:textColor="#ff898989"
                    android:textSize="14sp" >
                </TextView>

                <TextView
                    android:id="@+id/tv_emergency_updater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff898989"
                    android:textSize="14sp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_emergency_updatetime"
                    android:textColor="#ff898989"
                    android:textSize="14sp" >
                </TextView>

                <TextView
                    android:id="@+id/tv_emergency_updatetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff898989"
                    android:textSize="14sp" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_emergency_download"
            android:textColor="#1DB9F2"
            android:textSize="14sp" >
        </TextView>

        <TextView
            android:id="@+id/tv_redownload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_emergency_redownload"
            android:textColor="#1DB9F2"
            android:textSize="14sp" >
        </TextView>
    </LinearLayout>

    <com.daimajia.numberprogressbar.NumberProgressBar
        android:id="@+id/prg_downloadstate"
        style="@style/NumberProgressBar_Relax_Blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:progress_current="0" />

</LinearLayout>